--- a/scss/mcka_overrides.scss
+++ b/scss/mcka_overrides.scss
@@ -147,36 +147,6 @@
   margin-top: 0;
 }
 
-// Volume Control
-.volume-popover-container{
-  border: 0 none;
-  height: 100%;
-  margin: 0;
-  padding: 0;
-  position: relative;
-  width: 67px;
-}
-
-.custom-oo-volume-popover{
-  background-color: rgba(26, 26, 26, 0.0);
-  left: 0;
-  transform: rotate(270deg);
-  right: 0;
-  width: 100px;
-  height: 100px;
-  box-shadow: none;
-}
-
-.oo-volume-slider{
-  width: 100px;
-  height: 0;
-  margin-left: 0;
-}
-
-.oo-slider-volume[type=range]{
-  width: 100px;
-}
-
 // Play/pause button
 .oo-icon.oo-icon-play-slick {
     background-image: url("assets/images/play.png");
@@ -238,14 +208,19 @@
     opacity: 0.95;
 }
 
-// Volume Slider
-input[type=range] {
-  -webkit-appearance: none;
-  width: 50%;
-  margin: 13.8px 0;
+// Volume Control
+.volume-popover-container{
+  border: 0 none;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  position: relative;
+  width: 67px;
 }
-input[type=range]:focus {
-  outline: none;
+.custom-oo-volume-popover{
+  left: -70%;
+  bottom: 72px;
+  transform: rotate(270deg);
 }
 
 // fix for Safari
