--- a/scss/mcka_overrides.scss
+++ b/scss/mcka_overrides.scss
@@ -6,7 +6,7 @@
 .oo-popover-button-container {
   cursor: default;
   filter:progid:DXImageTransform.Microsoft.gradient(startColorstr='#63b8ee', endColorstr='#468ccf');
-  background-color:#5080CA;
+  background-color:#3384CA;
   -webkit-border-top-left-radius:20px;
   -moz-border-radius-topleft:20px;
   border-top-left-radius:20px;
@@ -22,8 +22,8 @@
   text-indent:0;
   display:inline-block;
   color:white;
-  font-family:sans-serif;
-  font-size:15px;
+  font-family:"Open Sans", sans-serif;
+  font-size:14px;
   font-style:normal;
   line-height:24px;
   text-decoration:none;
@@ -33,7 +33,7 @@
 
 .oo-closed-caption{
   height: 24px;
-  line-height: 26px;
+  line-height: 24px;
   width: 40px;
   color: rgb(255, 255, 255);
   opacity: 0.95;
@@ -60,7 +60,7 @@
 
 // Speed Button
 .oo-playback-speed-container {
-  background-color:#5080CA;
+  background-color:#3384CA;
   -webkit-border-top-left-radius:20px;
   -moz-border-radius-topleft:20px;
   border-top-left-radius:20px;
@@ -79,8 +79,9 @@
 .custom-control-bar-item{
   color: #ffffff;
   display: inline-block;
-  font-size: 15px;
-  font-family: sans-serif;
+  font-size: 14px;
+  font-family: "Open Sans", sans-serif;
+  font-weight: bold;
   text-align: center;
 }
 
@@ -94,7 +95,7 @@
 .custom-oo-content-time {
   display: inline-block;
   font-size: 12px;
-  font-family: sans-serif;
+  font-family: "Open Sans", sans-serif;
   position: absolute;
 }
 
