--- a/scss/base/_type.scss
+++ b/scss/base/_type.scss
@@ -16,7 +16,7 @@
     font-style: normal;
     font-weight: 400;
     src: local('Roboto Condensed'), local('RobotoCondensed-Regular'),
-    url('#{$font-path}/RobotoCondensed-Regular.woff2') format('woff2'),
+    //url('#{$font-path}/RobotoCondensed-Regular.woff2') format('woff2'),
     url('#{$font-path}/RobotoCondensed-Regular.woff') format('woff'),
     url('#{$font-path}/RobotoCondensed-Regular.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
@@ -27,7 +27,7 @@
     font-style: normal;
     font-weight: 700;
     src: local('Roboto Condensed Bold'), local('RobotoCondensed-Bold'),
-    url('#{$font-path}/RobotoCondensed-Bold.woff2') format('woff2'),
+    //url('#{$font-path}/RobotoCondensed-Bold.woff2') format('woff2'),
     url('#{$font-path}/RobotoCondensed-Bold.woff') format('woff'),
     url('#{$font-path}/RobotoCondensed-Bold.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
@@ -39,7 +39,7 @@
     font-style: normal;
     font-weight: 400;
     src: local('Roboto'), local('Roboto-Regular'),
-    url('#{$font-path}/Roboto-Regular.woff2') format('woff2'),
+    //url('#{$font-path}/Roboto-Regular.woff2') format('woff2'),
     url('#{$font-path}/Roboto-Regular.ttf') format('truetype'),
     url('#{$font-path}/Roboto-Regular.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
@@ -51,7 +51,7 @@
     font-style: normal;
     font-weight: 700;
     src: local('Roboto Bold'), local('Roboto-Bold'),
-    url('#{$font-path}/Roboto-Bold.woff2') format('woff2'),
+    //url('#{$font-path}/Roboto-Bold.woff2') format('woff2'),
     url('#{$font-path}/Roboto-Bold.ttf') format('truetype'),
     url('#{$font-path}/Roboto-Bold.woff') format('woff');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
@@ -63,7 +63,7 @@
     font-style: normal;
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'),
-    url('#{$font-path}/OpenSans.woff2') format('woff2'),
+    //url('#{$font-path}/OpenSans.woff2') format('woff2'),
     url('#{$font-path}/OpenSans.woff') format('woff'),
     url('#{$font-path}/OpenSans.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
@@ -75,7 +75,7 @@
     font-style: normal;
     font-weight: 400;
     src: local('Open Sans'), local('OpenSans'),
-    url('#{$font-path}/OpenSans.woff2') format('woff2'),
+    //url('#{$font-path}/OpenSans.woff2') format('woff2'),
     url('#{$font-path}/OpenSans.woff') format('woff'),
     url('#{$font-path}/OpenSans.ttf') format('truetype');
     unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215, U+E0FF, U+EFFD, U+F000;
