--- a/scss/mcka_overrides.scss
+++ b/scss/mcka_overrides.scss
@@ -31,6 +31,10 @@
   width: 57px;
 }
 
+.oo-switch-container .oo-switch-element {
+  margin-left: 0;
+}
+
 .oo-closed-caption{
   height: 24px;
   line-height: 24px;
@@ -102,16 +106,15 @@
   font-family: "Open Sans", sans-serif;
   position: absolute;
   color: #ffffff !important;
+  top: 2px;
 }
 
 .custom-oo-content-time.total-time{
-  right: 0;
-  top: 5px;
+  right: 5px;
 }
 
 .custom-oo-content-time.current-time{
-  left: 0;
-  top: 5px;
+  left: 5px;
 }
 
 // Scrubber Bar
@@ -124,13 +127,15 @@
 }
 
 .oo-scrubber-bar-container .oo-scrubber-bar-padding{
-  left: 35px;
-  right: 35px;
+  left: 45px;
+  right: 40px;
 }
 
 .oo-scrubber-bar-container .oo-scrubber-bar-padding .oo-scrubber-bar{
   background-color: rgba(175, 175, 175, 0.5);
   height: 10px;
+  top: 2px;
+  left: 2px;
 }
 
 .oo-scrubber-bar-container .oo-scrubber-bar-padding .oo-playhead-padding .oo-playhead{
@@ -159,18 +164,22 @@
 }
 
 // Play/pause button
+.oo-play-pause.oo-control-bar-item {
+    padding: 0 10px 0 10px !important;
+}
+
 .oo-icon.oo-icon-play-slick {
-    background-position: -15px -10px;
+    background-position: -15px -9px;
     display: inline-block;
     height: 24px;
-    width: 24px;
+    width: 22px;
 }
 
 .oo-icon.oo-icon-pause-slick{
-    background-position: -67px -10px;
+    background-position: -67px -9px;
     display: inline-block;
     height: 24px;
-    width: 24px;
+    width: 22px;
 }
 
 // Maximize button
