Mcka custom skin changes

--- a/scss/html5-skin.scss
+++ b/scss/html5-skin.scss
@@ -64,6 +64,9 @@
 
   // Skin
   @import "skin/default";
+
+  // Mcka specific overrides
+  @import "mcka_overrides";
 }
 
 //override non-responsive css on debug.ooyala.com
